# gmusic-cpp

./: .gitignore  CMakeLists.txt  README
gmusic-gtk/: CMakeLists.txt  application.cpp  application.hpp  login-window.cpp  login-window.hpp  main-window.cpp  main-window.hpp  main.cpp  resources.xml
gmusic-gtk/ui/: main-window-3.18.ui  main-window.ui
gmusic-qt/: CMakeLists.txt  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h
libgmusic/: CMakeLists.txt  config.h.in  kvstorage.cpp  kvstorage.hpp  operation-queue.cpp  operation-queue.hpp  player.cpp  player.hpp  session.cpp  session.hpp  utilities.cpp  utilities.hpp
libgmusic/api/: gmapi.cpp  gmapi.hpp
libgmusic/db/: database.cpp  database.hpp  db-engine.cpp  db-engine.hpp
libgmusic/http/: httperror.cpp  httperror.hpp  httpsession.cpp  httpsession.hpp
libgmusic/model/: model.hpp
